--- a/rom_in_ram.cfg
+++ b/rom_in_ram.cfg
@@ -1,5 +1,5 @@
 FEATURES {
-    STARTADDRESS: default = $3000;
+    STARTADDRESS: default = $5000;
 }
 SYMBOLS {
     __LOADADDR__: type = import;
@@ -8,14 +8,16 @@ SYMBOLS {
 MEMORY {
     ZP:       file = "", start = $0022,  size = $0080 - $0022, define = yes;
     ZP2:      file = "", start = $00A9,  size = $0100 - $00A9;
+    GOLDRAM:  file = "", start = $0400,  size = $0400;
     LOADADDR: file = %O, start = %S - 2, size = $0002;
     MAIN:     file = %O, start = %S,     size = __HIMEM__ - %S;
-    LOWRAM:   file = "", start = $1000,  size = $2000;
+    HIRAM:    file = "", start = $A000,  size = $2000;
 }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
     EXTZP:    load = ZP2,      type = zp, optional = yes; # OK if BASIC functions not used
     LOADADDR: load = LOADADDR, type = ro;
     CODE:     load = MAIN,     type = ro;
-    BSS:      load = LOWRAM,   type = bss, define = yes;
+    BSS:      load = GOLDRAM,  type = bss, define = yes;
+    BRAM:     load = HIRAM,    type = bss, define = yes;
 }
